<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SettongsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="307dp"
        android:layout_height="310dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="394dp"
        android:src="@drawable/avator" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="329dp"
        android:text="@string/default_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textColorHint="@android:color/holo_red_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="249dp"
        android:text="@string/default_status"
        android:padding="10sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textColorHint="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="106dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/change_image"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/settings_stautus_btn"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="42dp"
        android:background="@android:color/holo_purple"
        android:text="@string/change_status"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>