<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StartActivity">


    <Button
        android:id="@+id/start_reg_button"
        android:layout_width="369dp"
        android:layout_height="60dp"
        android:layout_above="@+id/start_login_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="31dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/reg_account"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="183dp"
        android:layout_above="@+id/start_reg_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="63dp"
        android:gravity="center"
        android:text="@string/welcome_note"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="357dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="173dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>