<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="410dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name"
            android:textSize="20sp"
            android:layout_marginEnd="55dp"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/holo_red_dark" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_display_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:layout_marginEnd="55dp"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginEnd="55dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/create_account"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/create_a_new_account"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>